# efficient-llm-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: rebuild-log.md  rebuild-plan.md
notebooks/: 01_finetune.ipynb  02_turboquant.ipynb
results/: comparison.md  eval_phi4mini_base_n50.json  eval_phi4mini_hellaswag_base_n50.json  eval_phi4mini_hellaswag_tq3_n50.json  eval_phi4mini_hellaswag_tq4_n50.json  eval_phi4mini_lora_n50.json  eval_phi4mini_lora_tq3_n50.json  eval_phi4mini_lora_tq4_n50.json  eval_phi4mini_lorav2_n50.json  eval_phi4mini_lorav2_tq3_n50.json  eval_phi4mini_lorav2_tq4_n50.json  eval_phi4mini_tq3_n50.json  eval_phi4mini_tq4_n50.json  eval_qwen25-3b_base_n50.json  eval_qwen25-3b_tq3_n50.json  eval_qwen25-3b_tq4_n50.json
scripts/: aggregate_eval.py  diag_quantize_real_kv.py  eval.py  eval_hellaswag.py  smoke_integration.py  train.py
src/evaluate/: __init__.py  metrics.py
src/serve/: api.py
src/turboquant/: __init__.py  polar_quant.py  qjl.py
tests/: test_metrics.py  test_turboquant.py  test_turboquant_integration.py
