[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "efficient-llm-pipeline"
version = "0.1.0"
description = "End-to-end LLM pipeline: QLoRA fine-tuning, TurboQuant KV cache compression, evaluation, and FastAPI serving on a single RTX 3090."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Yaniss Amazouz", email = "yaniss91600@gmail.com" }]
keywords = ["llm", "fine-tuning", "qlora", "quantization", "kv-cache", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.28",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "httpx>=0.27",
]
train = [
    "trl>=0.8",
    "wandb>=0.17",
]

[project.urls]
Repository = "https://github.com/YanissAmz/efficient-llm-pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# -- Ruff ------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# -- Mypy ------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# -- Pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
